[metadata]
name = dxtblibs
version = attr: dxtblibs.__version__
url = https://github.com/grimme-lab/dxtblibs/
author = marvinfriede
author_email = friede@thch.uni-bonn.de
description = Libraries for dxtb
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = library tight-binding quantum-chemistry integrals
python_requires = >=3.8
zip_safe = False

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src