[metadata]
name = dxtblibs
version = attr: dxtblibs.__version__
description = "dxtb's libcint interface"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grimme-lab/dxtblibs/
author = "Marvin Friede"
author_email = friede@thch.uni-bonn.de
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed
keywords =
    tight-binding
    quantum-chemistry
    integrals
    library
project_urls =
    Documentation = https://github.com/grimme-lab/dxtblibs
    Tracker = https://github.com/grimme-lab/dxtblibs/issues
    Source Code = https://github.com/grimme-lab/dxtblibs
zip_safe = False

[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    mypy
    pre-commit
    pylint
    pytest

[options.package_data]
dxtblibs =
    py.typed
