[metadata]
name = tad_libcint
version = attr: tad_libcint._version.__version__
description = "Torch Autodiff Libcint Interface"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tad-mctc/tad-libcint/
author = "Marvin Friede"
author_email = friede@thch.uni-bonn.de
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed
keywords =
    tight-binding
    quantum-chemistry
    integrals
    library
project_urls =
    Documentation = https://github.com/tad-mctc/tad-libcint
    Tracker = https://github.com/tad-mctc/tad-libcint/issues
    Source Code = https://github.com/tad-mctc/tad-libcint
zip_safe = False

[options]
packages = find:
install_requires =
    numpy
    tad-mctc
    torch>=1.11
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    covdefaults
    mypy
    pre-commit
    pylint
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist
    tox
tox =
    covdefaults
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist

[options.package_data]
tad_libcint =
    py.typed
    **/*.npy
    **/*.npz
